[package]
name = "webpki-roots"
version = "0.17.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
description = "Mozilla's CA root certificates for use with webpki"
homepage = "https://github.com/ctz/webpki-roots"
repository = "https://github.com/ctz/webpki-roots"

[dependencies]
webpki = { git = "https://github.com/mesalock-linux/webpki", tag = "sgx_1.0.9" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", optional = true, tag = "v1.0.9" }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
